WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151800
[css-grid] Fix height computation of grid items with borders
https://bugs.webkit.org/show_bug.cgi?id=151800
Summary
[css-grid] Fix height computation of grid items with borders
Sergio Villar Senin
Reported
2015-12-03 00:39:33 PST
[css-grid] Fix height computation of grid items with borders
Attachments
Patch
(5.50 KB, patch)
2015-12-03 00:43 PST
,
Sergio Villar Senin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2015-12-03 00:43:56 PST
Created
attachment 266517
[details]
Patch
Sergio Villar Senin
Comment 2
2015-12-14 02:06:39 PST
Committed
r194030
: <
http://trac.webkit.org/changeset/194030
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug