[css-grid] Fix height computation of grid items with borders https://bugs.webkit.org/show_bug.cgi?id=151800

Reviewed by Darin Adler.

Source/WebCore:

When computing the logical height of grid items for the
default "min-height: auto;" case we were constraning the
min-content size using constrainLogicalHeightByMinMax()
instead of constrainContentLogicalHeightByMinMax(). The
problem of using the former is that we were adding the borders
twice.

Test: fast/css-grid-layout/grid-item-with-border-in-intrinsic.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeight):

LayoutTests:

* fast/css-grid-layout/grid-item-with-border-in-intrinsic-expected.txt: Added.
* fast/css-grid-layout/grid-item-with-border-in-intrinsic.html: Added.

Canonical link: https://commits.webkit.org/170352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194030 268f45cc-cd09-0410-ab3c-d52691b4dbfc